# CherryBuildTool_demo

./: CMakeLists.txt  config.json  main.cpp  main.hpp  pg_Info.cpp  pg_Logs.cpp
.github/workflows/: build.yml
CherryRa1n/: CMakeLists.txt  main.cpp  main.hpp  pg_Logs.cpp
prerun/: CMakeLists.txt  prerun.cpp
